set headers list